# NodeWatch

./: .gitignore  CLAUDE.md  pyproject.toml
artifacts/: .gitkeep
config/: datasets.yaml
data/processed/: .gitkeep
docs/: DESIGN.md  PROJECT_OVERVIEW.md
experiments/: ablation.py  run_dataset.py
results/: .gitkeep
src/common/: __init__.py  config.py
src/etl/: __init__.py  build.py
src/features/: __init__.py  build.py
src/graph/: __init__.py
src/modeling/: __init__.py  harness.py  metrics.py
src/topology/: __init__.py  engine.py  leakage_test.py  window_graph.py
tests/: .gitkeep
